links for resources are generated